# py-make

./: .coveragerc  .gitignore  .travis.yml  CONTRIBUTE  CONTRIBUTING.md  LICENCE  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
examples/: Makefile  simple_examples.py
pymake/: __init__.py  _main.py  _pymake.py  _utils.py  _version.py  version.py
pymake/tests/: tests_main.py  tests_pymake.py  tests_version.py
tests/: tests_main.py  tests_version.py
